tests/bugs/funky_tuples_587.sy
start :: fn do
    (1 2 3)
end

// error: @2
